[issue #27] fix pie chart label clipping problem

--- a/test/dc.css
+++ b/test/dc.css
@@ -44,7 +44,7 @@ a {
 }
 
 .pie-slice {
-    fill: white;
+    fill: black;
     font-size: 12px;
 }
 
